--- a/readme.texi
+++ b/readme.texi
@@ -22,7 +22,7 @@ This is the IPC::Locker Perl Package.
 @node Copyright, Description, Top, Top
 @section Copyright
 
-This package is Copyright 1998 by Wilson Snyder @email{wsnyder@@ultranet.com}.
+This package is Copyright 2000 by Wilson Snyder @email{wsnyder@@world.std.com}.
 
 You may distribute under the terms of either the GNU General Public License
 or the Artistic License, as specified in the Perl README file, with the
@@ -82,6 +82,9 @@ Type @samp{perl Makefile.PL} to configure IPC::Locker for your system.
 
 @item
 Type @samp{make} to compile IPC::Locker.
+
+@item
+Type @samp{make test} to check the compilation.
 
 @item
 Type @samp{make install} to install the programs and any data files and
