--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,14 @@ The contributors that suggested a given feature is shown in [].
 	
 This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
+* Changes in IPC::Locker 1.14 2/13/2000
+
+**	Changed default port to 'lockerd' which will look up the port
+	number in /etc/services.  If not found defaults to old 1751.
+
+***	Improved detection and recovery of deamon failures.
+
+
 * Changes in IPC::Locker 1.12 5/24/2000
 
 **	Added support for Unix named sockets
@@ -15,7 +23,7 @@ This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
 
 ----------------------------------------------------------------------
-$Id: NEWS,v 1.1 2000/05/24 14:20:42 wsnyder Exp $
+$Id: NEWS,v 1.4 2001/02/13 17:37:34 wsnyder Exp $
 ----------------------------------------------------------------------
 Copyright information:
 
