--- a/readme.texi
+++ b/readme.texi
@@ -22,7 +22,7 @@ This is the IPC::Locker Perl Package.
 @node Copyright, Description, Top, Top
 @section Copyright
 
-This package is Copyright 2000 by Wilson Snyder @email{wsnyder@@wsnyder.org}.
+This package is Copyright 2001 by Wilson Snyder @email{wsnyder@@wsnyder.org}.
 
 You may distribute under the terms of either the GNU General Public License
 or the Artistic License, as specified in the Perl README file, with the
@@ -65,7 +65,8 @@ Download the latest package from that site, and decompress.
 This version of IPC::Locker has been built and tested on:
 
 @itemize @bullet
-@item sparc-sun-solaris2.5.1
+@item i386-linux
+@item sparc-sun-solaris2.7
 @end itemize
 
 It should run on any system with perl and TCP/IP socketing.
@@ -75,7 +76,7 @@ It should run on any system with perl and TCP/IP socketing.
 
 @enumerate
 @item
-@code{cd} to the directory containing this INSTALL notice.
+@code{cd} to the directory containing this README notice.
 
 @item
 Type @samp{perl Makefile.PL} to configure IPC::Locker for your system.
