--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,11 @@ The contributors that suggested a given feature is shown in [].
 	
 This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
+* Changes in IPC::Locker 1.401 8/22/2002
+
+****	Fix tests to start the servers automatically.
+
+
 * Changes in IPC::Locker 1.400 8/1/2002
 
 **	Added pidstatd deamon and pidwatch program.
@@ -54,7 +59,7 @@ This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
 
 ----------------------------------------------------------------------
-$Id: NEWS,v 1.14 2002/08/01 14:41:01 wsnyder Exp $
+$Id: NEWS,v 1.15 2002/08/22 14:31:50 wsnyder Exp $
 ----------------------------------------------------------------------
 Copyright information:
 
