--- a/readme.texi
+++ b/readme.texi
@@ -22,10 +22,10 @@ This is the IPC::Locker Perl Package.
 @node Copyright, Description, Top, Top
 @section Copyright
 
-This package is Copyright 2001 by Wilson Snyder @email{wsnyder@@wsnyder.org}.
+This package is Copyright 1999-2003 by Wilson Snyder @email{wsnyder@@wsnyder.org}.
 
 You may distribute under the terms of either the GNU General Public License
-or the Artistic License, as specified in the Perl README file.
+or the Perl Artistic License, as specified in the Perl README file.
 
 This code is provided with no warranty of any kind, and is used entirely at
 your own risk.
