--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,10 @@ The contributors that suggested a given feature is shown in [].
 	
 This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
+* Changes in IPC::Locker 1.432 11/30/2004
+
+***	Fix filename conflict on Windows
+
 * Changes in IPC::Locker 1.431 9/13/2004
 
 ***	Disassociate pidstatd from stdout so runs better as deamon.
@@ -80,7 +84,7 @@ This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
 
 ----------------------------------------------------------------------
-$Id: NEWS,v 1.22 2004/09/13 14:06:05 ws150726 Exp $
+$Id: NEWS,v 1.23 2004/11/30 13:46:11 ws150726 Exp $
 ----------------------------------------------------------------------
 Copyright information:
 
