--- a/readme.texi
+++ b/readme.texi
@@ -24,7 +24,7 @@ This is the IPC::Locker Perl Package.
 @node Copyright, Description, Top, Top
 @section Copyright
 
-This package is Copyright 1999-2003 by Wilson Snyder @email{wsnyder@@wsnyder.org}.
+This package is Copyright 1999-2006 by Wilson Snyder @email{wsnyder@@wsnyder.org}.
 
 You may distribute under the terms of either the GNU General Public License
 or the Perl Artistic License, as specified in the Perl README file.
@@ -40,7 +40,9 @@ that server.  The result is that clients can access named locks on a Internet
 wide bases, solving critical section problems without the mess of NFS or other
 file locking techniques.
 
-For example:
+@subsection IPC::Locker
+
+IPC::Locker is a Perl package which allows cross cluster locking.  For example:
 
 @example
   my $lock = IPC::Locker->lock(host=>'example.std.com');
@@ -49,6 +51,37 @@ For example:
 @end example
 
 See @samp{man IPC::Locker} after installation.
+
+@subsection lockerd
+
+lockerd is the daemon that supports IPC::Locker. See @samp{man
+lockerd} after installation.
+
+@subsection IPC::PidStat
+
+IPC::PidStat is a Perl package which answers the question, ``is pid X
+running on host Y?''.  See @samp{man IPC::PidStat} after installation.
+
+@subsection pidstat
+
+pidstat is a program which answers the question, ``is pid X
+running on host Y?''.  See @samp{man pidstat} after installation.
+
+@subsection pidstatd
+
+pidstat is the daemon that supports IPC::PidStat and pidstat. See
+@samp{man pidstatd} after installation.
+
+@subsection pidwatch
+
+pidwatch is a program which starts other programs, and kill that program
+when another job exists.  @samp{man pidwatch} after installation.
+
+@subsection check_lockerd and check_pidstatd
+
+check_lockerd and check_pidstatd are Nagios plugins to check lockerd
+and pidstatd.  See the Nagios documentation
+@uref{http://www.nagios.org} for information on installing plugins.
 
 @node Obtaining Distribution, Supported Systems, Description, Top
 @section Obtaining Distribution
@@ -92,8 +125,15 @@ Type @samp{make install} to install the programs and any data files and
 documentation.
 
 @item
-You may wish to install @samp{lockerd} in a init.rc file so that it is run at
-system startup.  An example for Linux is in init.d/lockerd.
+You may wish to install @samp{lockerd} and @samp{pidstatd} in a
+init.rc file so that it is run at system startup.  Depending on your
+distribution, you may be able to just copy the examples in
+init.d/lockerd to /etc/init.d, and type @samp{chkconfig pidstatd on}
+and @samp{chkconfig lockerd on}.
+
+@item
+If you are using Nagios (@url{http://www.nagios.org}), sample scripts
+to check the daemons are included in the nagios subdirectory.
 
 @end enumerate
 
