Import of WSNYDER/IPC-Locker-1.451 from CPAN.
gitpan-cpan-distribution: IPC-Locker
gitpan-cpan-version:      1.451
gitpan-cpan-path:         WSNYDER/IPC-Locker-1.451.tar.gz
gitpan-cpan-author:       WSNYDER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -2,7 +2,11 @@ Revision history for Perl extension IPC::Locker
 
 The contributors that suggested a given feature are shown in [].
 
-* IPC::Locker 1.450 5/16/2006
+* IPC::Locker 1.451 5/23/2006
+
+****	Cache IP addresses to avoid name server traffic. [by Greg Waters]
+
+* IPC::Locker 1.450 (Alpha release only)
 
 **	Created lockersh program for adding locks around other programs.
 
@@ -91,7 +95,7 @@ The contributors that suggested a given feature are shown in [].
 ***	Fixed bug where lock expiration timer would fire at wrong time
 
 ----------------------------------------------------------------------
-$Id: Changes,v 1.8 2006/05/16 18:43:27 wsnyder Exp $
+$Id: Changes,v 1.11 2006/05/23 14:55:31 wsnyder Exp $
 DESCRIPTION: Documentation on change history for this package
 ----------------------------------------------------------------------
 
