--- a/README
+++ b/README
@@ -6,7 +6,7 @@ This is the IPC::Locker Perl Package.
 1.1 Copyright
 =============
 
-This package is Copyright 1999-2007 by Wilson Snyder
+This package is Copyright 1999-2008 by Wilson Snyder
 <wsnyder@wsnyder.org>.
 
    You may distribute under the terms of either the GNU General Public
@@ -115,9 +115,26 @@ This version of IPC::Locker has been built and tested on:
 
   6. You may wish to install `lockerd' and `pidstatd' in a init.rc file
      so that it is run at system startup.  Depending on your
-     distribution, you may be able to just copy the examples in
-     init.d/lockerd to /etc/init.d, and type `chkconfig pidstatd on'
-     and `chkconfig lockerd on'.
+     distribution, you may be able to just:
+
+     `cp  init.d/lockerd   /etc/init.d/lockerd'  (On one server only)
+
+     `cp  init.d/pidstatd  /etc/init.d/pidstatd' (On all machines)
+
+     Edit paths in above to point to /usr/bin instead of
+     /usr/local/bin, if needed.
+
+     `/etc/init.d/lockerd start'  (On one server only)
+
+     `/etc/init.d/pidstatd start' (On all machines)
+
+     `chkconfig lockerd on'  (On one server only)
+
+     `chkconfig pidstatd on' (On all machines)
+
+     If you get "This account is currently not available."  you need to
+     change the daemon account from a shell of /sbin/nologin to
+     /sbin/bash.
 
   7. If you are using Nagios (`http://www.nagios.org'), sample scripts
      to check the daemons are included in the nagios subdirectory.
