--- a/Changes
+++ b/Changes
@@ -2,6 +2,12 @@ Revision history for Perl extension IPC::Locker
 
 The contributors that suggested a given feature are shown in [].
 
+* IPC::Locker 1.483 2008/07/28
+
+****	Fix pidwatch --killer --signal to prepend dash.  [Bryce Denney]
+
+****	Fix locker ignoring remote PidWatch process death.
+
 * IPC::Locker 1.482 2008/07/01
 
 ***	Don't require pidstatd for pidwatch'es on localhost. [Bryce Denney]
