--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Perl extension IPC::Locker
 
 The contributors that suggested a given feature are shown in [].
 
+* IPC::Locker 1.484 2009/05/08
+
+**	This package is now licensed under LGPL v3 and/or Artistic v2.0.
+
 * IPC::Locker 1.483 2008/07/28
 
 ****	Fix pidwatch --killer --signal to prepend dash.  [Bryce Denney]
@@ -165,9 +169,9 @@ DESCRIPTION: Documentation on change history for this package
 
 This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
-Copyright 1999-2008 by Wilson Snyder.  This program is free software;
+Copyright 1999-2009 by Wilson Snyder.  This program is free software;
 you can redistribute it and/or modify it under the terms of either the GNU
-General Public License or the Perl Artistic License.
+Lesser General Public License Version 3 or the Perl Artistic License Version 2.0.
 
 Local variables:
 mode: outline
