--- a/Changes
+++ b/Changes
@@ -2,6 +2,11 @@ Revision history for Perl extension IPC::Locker
 
 The contributors that suggested a given feature are shown in [].
 
+* IPC::Locker 1.450 2012/03/16
+
+****	Fix cpan-testers' tests on systems without perldoc.
+
+
 * IPC::Locker 1.489 2012/01/12
 
 ****	Fix some false CPAN test failures.
